--- a/VRChat/95/1172695.html
+++ b/VRChat/95/1172695.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OW5+Z3dOROjjp7Y87wNkuZ8dZ5+2OqT0cJbXiBUy3Zk="></script>
+    "LBXi/0Z00BJbx31wy07dQw6aBJjlGnD3gZ1SvvDRYXg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル (myomyo)","description":"-オリジナル3Dモデル (myomyo)\n\n-制作者  eve\n\n-VRChat向けの設定をしております\n\n\n\n-次のモデルの説明利用規約に記載されているので、\n購入前に必ずお読みいただき、ご購入をお願いいたします\n\n","url":"https://booth.pm/ja/items/1172695","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/083faa0e-4980-4940-a74b-eb814f88b371/i/1172695/2e329cfc-cf08-4a5a-a7b6-39417bbc0145_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OW5+Z3dOROjjp7Y87wNkuZ8dZ5+2OqT0cJbXiBUy3Zk="></script>
+    nonce="LBXi/0Z00BJbx31wy07dQw6aBJjlGnD3gZ1SvvDRYXg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
