--- a/VRChat/19/1172619.html
+++ b/VRChat/19/1172619.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "27jHoPFn5+jeP2TqX1V94O4MoacTMSpFFpauviGQxYQ="></script>
+    "N73txL16fd7JEyscWjAmixY6yPzd5CqVQoZlweKPzhA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラウンドイヤリング 【3Dモデル】","description":"VRchat向けのラウンドイヤリングのアクセサリです。\n\nポリゴン数 2,632です。\nunitypackage・FBXファイルが入っていて、テクスチャやシェーダーはご自由に設定してください。\nあと、ボーンが適用されているのでDynamic boneなどを使って動きを入れることができます。\n\nデータを使用したSSをSNS等に上げると作者が喜びます。\n何か声をかけたい方はTwitterの「@eissi_VRC」にご連絡ください。\n\n\n\n私的利用に対してご自由にお使いください。\n商用利用一部可（動画・画像に関するもののみ許可）（データが含めてるモデルの配布禁止）\n\n当データの再配布・再販売は禁止します。\nまた、改変したデータを配布・販売するのも禁止します。\n規約は常に商品紹介文に記載されているものを最新の規約とします。\n当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/1172619","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2eb13332-c5d3-49a4-842a-6935478dd539/i/1172619/5da04708-850f-4f75-a2b4-27c64e822b5b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="27jHoPFn5+jeP2TqX1V94O4MoacTMSpFFpauviGQxYQ="></script>
+    nonce="N73txL16fd7JEyscWjAmixY6yPzd5CqVQoZlweKPzhA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
