--- a/VRChat/36/1172336.html
+++ b/VRChat/36/1172336.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "47b11rDcOSEesJCOfkzQZmwzx/ay41bXd+NHIpYORyQ="></script>
+    "/RAs9v0EWahxgv1IJCTiONXirZWuaeFFG99lM8VThjU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Team batch","description":"Team shark tooth用のバッチです。\n\n△188\n\nギザ歯好きのためのギザ歯っ子チームです\nギザ歯アバターの子に着けてあげて下さい\n\n特に参加登録とかはいらないですが、使った時は報告してくれると嬉しいです。\n\nご連絡は@Orca_is_me_VRへ\n","url":"https://booth.pm/ja/items/1172336","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1172336/c86aa36b-5502-4981-85af-6d7b88a31d14_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="47b11rDcOSEesJCOfkzQZmwzx/ay41bXd+NHIpYORyQ="></script>
+    nonce="/RAs9v0EWahxgv1IJCTiONXirZWuaeFFG99lM8VThjU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -354,9 +354,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
