--- a/VRChat/79/1171379.html
+++ b/VRChat/79/1171379.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RsHeico4cptYS3Tw5G0S71lo8qi7W2ykVQd06bbrKno="></script>
+    "51SOww1YJr420c1QXGZ0nhNoajFfdpQdRP5vKX8+fk4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VR向けアバター】もずいぬ Ver1.1　byもずくん","description":"もずくんの　もずいぬ\n作った人　もずくん　@mozukuumauma\n　（Twitterで報告もらえると超嬉しいです！）\n2019-01-09\nVer.1.1 1/13\n\n■事前準備してほしいもの\n　基本的には最新版の【VRCSDK】\n\n■内容物\n　本体　－　FBXファイル2個\n　　　　　　　mozuinu →1メッシュの軽いやつ\n　　　　　　　mozuinu_bunkai →パーツ別で分けてる改変向け\n　　　　　　テクスチャ2枚\n　　　　　　レイヤー情報のある改変用テクスチャデータ2枚\n　　　　　　　上記利用出来ない人向けの個別テクスチャデータ\n　　　　　　　（体・チークのテクスチャ　＋　体のスパッツ上乗せ用）\n　　　　　　　上記2枚のテクスチャのUV\n　　　　　　\n　Unitypackage　ー　パッケージ内\n　　　【Unity上】の画像参照（BOOTH5枚目の画像）\n　　　mozuinu　こっちが【A】　1メッシュの軽いやつ\n　　　mozuinu_bunkai　こっちが【B】　パーツ別分けてる奴\n　　　まんまるシェーダー1.3適応済　　　　作者様　@Mini_9321_VR\n　　　アニメーションオーバーライド6種　（AとBで別々なので合計12種類だけど、互換性無いよ）\n　　　上記設定済Prefab同梱済\n　　　　↑Hierarchyに投げ込むだけでアバターアップロードすぐ出来ます\n　　　\n■特徴\n　VRCアバターパフォーマンス\n　上記【A】【GOOD】ランク\n　上記【B】【Medium】ランク\n　△35110\n　VRC向けLip Sync15種\n　　＋VRM向けLip Sync5種\n　表情31種類　組み合わせて利用することを想定しています\n※※※※超大事な事※※※※\n【フルボディトラッキング対応してます】\n【通常VR・デスクトップでもひどい破綻はありません】\n【作者はダイナミックボーンを持ってないし理解してないので追加されたボーンはありません】\n【よって揺らしたい場合はモデリングソフトを経由してください】\n【作者はViveで自分が使いやすい配置にアニメーションオーバーライドを仕込んでるので、好きに使いやすいように変えてくださいね】\n　\n■キャラ紹介\n名前　もずいぬ\nたれ耳の元気系犬耳娘です\n\n基本VRchat前提で構成しています。\nバーチャルキャスト等の他のVRコンテンツでの利用も問題ありません\nVRM形式への変換は自分でお願いします\n\n以下テンプレ\n購入を規約を守る意思表示とします\n作者【もずくん@mozukuumauma】に権利があります\n\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（メッシュフルスクラッチ　テクスチャには商用利用可の物を一部利用してます）\n　（ここでの商用利用の定義は、ゲーム等にモデルを利用して収益を得る行為とします）\n　【もずいぬのデータ（メッシュ・テクスチャ含む）を販売データの一部として流用することを禁じます】\n　【上記発覚次第、法的処置に出る場合もあります】\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやっていいの作って）\nパーツ流用　○　（購入者は好きにバラして改変して使っていけ）\n再配布　×　（VRCアバターペデスタルも不可）\nR18-18G　○　（モデリングソフト使える人ならすぐ脱がせれるよ）\n政治や宗教要素　×　（政治批判等の要素に限る、ネタでコ○ギョしたりするのは面白いので良し）\n取材や雑誌掲載TV等に映るの　○　（知らぬ間にって場合もあるので気にしないでいいのよ）\nアバター利用でのVtuber活動　○　（逆にする人居るなら呼んでほしいレベル）\nわからんことあったらTwitterでリプくれ\nアバターアップロードとかの方向性の質問は知らん　それは管轄外だ\n\n更新履歴\n2019/01/13　改変向けパーツの別れたFBX・ユニパケ設定済プレハブを追加","url":"https://booth.pm/ja/items/1171379","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/1171379/f76fc621-46e4-4da8-8356-73aacb511299_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RsHeico4cptYS3Tw5G0S71lo8qi7W2ykVQd06bbrKno="></script>
+    nonce="51SOww1YJr420c1QXGZ0nhNoajFfdpQdRP5vKX8+fk4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -493,9 +493,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
