--- a/VRChat/07/1169807.html
+++ b/VRChat/07/1169807.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OHpm8vaCbw4Gy91+h1v/7gtE0Gq69RuBwxQtjwVWjZ8="></script>
+    "Q6U35pRQYNDQDXcnyYywaHnA9xkpK5udZvoMmDRO4aI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　刀","description":"VRChatなどで使用できる刀の3Dモデルとなります。\nポリゴン数\n点1462　面1458　三角2848\n\n同梱ファイル\n・fbxデータ\n・unitypackage\n・テクスチャデータ\n・readmeテキスト\n\n利用規約 ver1.00\n・本モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなします。\n・本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n・使用の報告はしなくても構いません。\n・利用規約の内容は予告なく変更する場合があります。\n・利用規約は常に最新のものが適用されるものとします。\n著作人格権に基づく表記\n・著作権は放棄していません。\n・本モデルのデータそのものの転載・再配布は禁止です。\n・本モデルを利用して制作された作品（3Dモデル・動画・画像・ゲーム等）で対価を得るなどの、営利目的での使用は可能です。\n・本モデルを改変や、本モデル由来のパーツを別モデルに流用などは一切自由です。\nサポートについて\n頒布データの内容に致命的な欠陥があると当方が認めた場合、頒布データの置き換えを行います。\n頒布データの内容を変更した場合、BoothのページあるいはTwitterで告知いたします。\n置き換えデータは一度購入したアカウントで再度Boothのダウンロードページを表示すると再購入等必要無くダウンロード可能です。\nこのサポートは当方の都合により予告なく打ち切られる場合がございます。ご了承ください。\n禁止事項\n・公序良俗、良識に反する使用。\n・政治的、宗教的利用、18禁作品への使用。\n・他者や他国を侮蔑するための利用。\n・転載、再配布、交換、譲渡。（データ共有できる状態にすること）\n・このデータを元にした無断での立体出力。\n・このデータの作成者を騙ること。\n\n規約制定日2019年1月8日\n\n連絡先\ntwitter @as_keito","url":"https://booth.pm/ja/items/1169807","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1471554c-aff7-4d89-8d59-74089c20e5f2/i/1169807/21720b43-22b8-4368-acf9-f4718c5b5c6e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OHpm8vaCbw4Gy91+h1v/7gtE0Gq69RuBwxQtjwVWjZ8="></script>
+    nonce="Q6U35pRQYNDQDXcnyYywaHnA9xkpK5udZvoMmDRO4aI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -393,9 +393,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
