--- a/VRChat/95/1169595.html
+++ b/VRChat/95/1169595.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QAJE9I3M48CnuWmOcXuyYR96BDOTVQMcaOp6Aj3A8Pk="></script>
+    "EEK2sX2IMOyhKsnSNT9Cxtzat1PJVIFCq7RGqhh6LDo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRC推奨]ツッコミ3点セット","description":"あけましておめでとうございます。今年も万事屋をよろしくお願いします。\n今回の商品はピコピコハンマー、ハリセン、たらいの３点セット！武器とか怖いけどこれなら、、！無言勢だけどツッコミ入れたい、、、そんなアナタ！ポコッと突っ込んでやりましょう！（音などは付属していません）\n内容物　FBX　テクスチャそれぞれ３種ずつ（ノーマルマップ　テクスチャ　メタリック）（たらいは２種）\nこの製品によるいかなる損害も当方は責任を負いません","url":"https://booth.pm/ja/items/1169595","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/1169595/0b75af2d-cd75-4302-9dd3-cc248c388e4b_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QAJE9I3M48CnuWmOcXuyYR96BDOTVQMcaOp6Aj3A8Pk="></script>
+    nonce="EEK2sX2IMOyhKsnSNT9Cxtzat1PJVIFCq7RGqhh6LDo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -191,7 +191,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      125
+                                      124
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -207,7 +207,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      125
+                                      124
                                     </div>
                                   </div></a>
                                 </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
