--- a/VRChat/29/1169229.html
+++ b/VRChat/29/1169229.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NJo2YiyzZbGaPTdU2T3s4uA5OF7rUpVgvhzrtTJcIVI="></script>
+    "Kfl+TNsbvdRkcaAbnDpDLubAToaRL1TN8slF2tW6xfg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRoid】ファンタジー風ゴシックドレス【正式版対応済】","description":"ファンタジーな世界のお城や宮殿などでもご着用いただけそうな\nゴシックスタイルドレスです。\nVRoid Studioベータ版、正式版の両方に対応しました。\n\nBoth VRoid Studio beta version and stable version are now supported.\n\n","url":"https://booth.pm/ja/items/1169229","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/e0c00f80-a6ee-49d6-8710-f6624f57e422/i/1169229/90a97597-9854-4fa2-ac22-7c0118414789_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NJo2YiyzZbGaPTdU2T3s4uA5OF7rUpVgvhzrtTJcIVI="></script>
+    nonce="Kfl+TNsbvdRkcaAbnDpDLubAToaRL1TN8slF2tW6xfg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -513,9 +513,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
